Change to ubuntu

--- a/.github/workflows/export-and-branch-solution.yml
+++ b/.github/workflows/export-and-branch-solution.yml
@@ -26,7 +26,7 @@ permissions:
 jobs:
   export-from-dev:
     environment: philips-dev
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     env:
       RUNNER_DEBUG: 1
 
