--- a/.github/workflows/release-solution.yml
+++ b/.github/workflows/release-solution.yml
@@ -40,6 +40,9 @@ jobs:
       with:
         lfs: true
 
+    - name: Install Power Platform Tools
+      uses: microsoft/powerplatform-actions/actions-install@v1
+
     - name: Pack solution
       uses: microsoft/powerplatform-actions/pack-solution@v1
       with:
@@ -86,6 +89,9 @@ jobs:
     - uses: actions/checkout@v4
       with:
         lfs: true
+
+    - name: Install Power Platform Tools
+      uses: microsoft/powerplatform-actions/actions-install@v1
 
     - name: Fetch the ready to ship solution from GH artifact store
       uses: actions/download-artifact@v4
