--- a/.github/workflows/release-all-in-one.yml
+++ b/.github/workflows/release-all-in-one.yml
@@ -1,4 +1,4 @@
-name: release-solution-simple
+name: release-all-in-one
 on:
   workflow_dispatch:
     inputs:
@@ -6,14 +6,10 @@ on:
         description: 'name of the solution to worked on from Power Platform'
         required: true
         default: HealthcareSystem
-      solution_shipping_folder:
-        description: 'folder name for staging the exported solution *do not change*'
-        required: true
-        default: out/ship/
-      solution_source_folder:
-       description: 'folder name to be created and checked in *do not change*'
+      solution_exported_folder:
+       description: 'folder where the released binaries are going to be hosted *do not change*'
        required: true
-       default: solutions/
+       default: out/exported
       solution_release_folder:
        description: 'folder where the released binaries are going to be hosted *do not change*'
        required: true
@@ -26,31 +22,31 @@ permissions:
   contents: write
 jobs:
   convert-to-managed:
-    environment: philips-build
+    environment: philips-dev
     runs-on: ubuntu-latest
     env:
       RUNNER_DEBUG: 1
 
     steps:
-    - uses: actions/checkout@v4
-      with:
-        lfs: true
-
     - name: Install Power Platform Tools
       uses: microsoft/powerplatform-actions/actions-install@v1
 
-    - name: Pack solution
-      uses: microsoft/powerplatform-actions/pack-solution@v1
+    - name: Export Solution
+      uses: microsoft/powerplatform-actions/export-solution@v1
       with:
-        solution-folder: ${{ github.event.inputs.solution_source_folder}}/${{ github.event.inputs.solution_name }}
-        solution-file: ${{ github.event.inputs.solution_shipping_folder}}/${{ github.event.inputs.solution_name }}.zip
-        solution-type: Managed
+        environment-url: ${{secrets.POWERPLATFORM_URL}}
+        app-id: ${{secrets.CLIENT_ID}}
+        client-secret: ${{ secrets.CLIENT_SECRET }}
+        tenant-id: ${{secrets.TENANT_ID}}
+        solution-name: ${{ github.event.inputs.solution_name }}
+        managed: true
+        solution-output-file: ${{ github.event.inputs.solution_exported_folder}}/${{ github.event.inputs.solution_name }}.zip
 
     - name: Upload the ready to ship solution to GH artifact store
       uses: actions/upload-artifact@v4
       with:
         name: managedSolutions
-        path: ${{ github.event.inputs.solution_shipping_folder}}/${{ github.event.inputs.solution_name }}.zip
+        path: ${{ github.event.inputs.solution_exported_folder}}/${{ github.event.inputs.solution_name }}.zip
 
   release-to-prod:
     needs: [ convert-to-managed ]
