--- a/.github/workflows/release-solution.yml
+++ b/.github/workflows/release-solution.yml
@@ -22,8 +22,8 @@ on:
        description: 'folder where the released binaries are going to be hosted *do not change*'
        required: true
        default: out/release
-  release:
-    types: [created]
+  # release:
+  #   types: [created]
 
 
 permissions:
