--- a/.github/workflows/release-all-in-one.yml
+++ b/.github/workflows/release-all-in-one.yml
@@ -108,12 +108,12 @@ jobs:
           files: ${{ env.EXPORT_FOLDER }}/${{ env.SOLUTION_NAME }}.zip
 
   release-to-prod:
-    needs: [convert-to-managed]
+    needs: [export-solution]
     environment: philips-prod
     runs-on: ubuntu-latest
     env:
-      SOLUTION_NAME: ${{ needs.convert-to-managed.outputs.solution_name }}
-      RELEASE_FOLDER: ${{ needs.convert-to-managed.outputs.release_folder }}
+      SOLUTION_NAME: ${{ needs.export-solution.outputs.solution_name }}
+      RELEASE_FOLDER: ${{ needs.export-solution.outputs.release_folder }}
     steps:
       - name: Install Power Platform Tools
         uses: microsoft/powerplatform-actions/actions-install@v1
