--- a/.github/workflows/release-all-in-one.yml
+++ b/.github/workflows/release-all-in-one.yml
@@ -12,7 +12,7 @@ on:
         required: false
         default: v1.0.0.0
   release:
-    types: [created]
+    types: [published]
 
 permissions:
   contents: write
